fb_ssd1306: add support for SSD1306

--- a/extra/.config
+++ b/extra/.config
@@ -2410,9 +2410,12 @@ CONFIG_FB_TFT_HX8340BN=m
 CONFIG_FB_TFT_HX8347D=m
 CONFIG_FB_TFT_ILI9320=m
 CONFIG_FB_TFT_ILI9325=m
+CONFIG_FB_TFT_ILI9340=m
 CONFIG_FB_TFT_ILI9341=m
 CONFIG_FB_TFT_PCD8544=m
 CONFIG_FB_TFT_SSD1289=m
+CONFIG_FB_TFT_SSD1306=m
+CONFIG_FB_TFT_SSD1331=m
 CONFIG_FB_TFT_SSD1351=m
 CONFIG_FB_TFT_ST7735R=m
 CONFIG_FB_TFT_WATTEROTT=m
@@ -2442,7 +2445,7 @@ CONFIG_BACKLIGHT_CLASS_DEVICE=y
 CONFIG_DUMMY_CONSOLE=y
 CONFIG_FRAMEBUFFER_CONSOLE=y
 # CONFIG_FRAMEBUFFER_CONSOLE_DETECT_PRIMARY is not set
-# CONFIG_FRAMEBUFFER_CONSOLE_ROTATION is not set
+CONFIG_FRAMEBUFFER_CONSOLE_ROTATION=y
 CONFIG_FONTS=y
 CONFIG_FONT_8x8=y
 CONFIG_FONT_8x16=y
