overlays: add pitft

--- a/extra/.config
+++ b/extra/.config
@@ -2882,8 +2882,8 @@ CONFIG_FB_TFT_TLS8204=y
 CONFIG_FB_TFT_UC1701=y
 CONFIG_FB_TFT_UPD161704=y
 CONFIG_FB_TFT_WATTEROTT=y
-CONFIG_FB_FLEX=y
-CONFIG_FB_TFT_FBTFT_DEVICE=y
+CONFIG_FB_FLEX=m
+CONFIG_FB_TFT_FBTFT_DEVICE=m
 # CONFIG_FB_SSD1307 is not set
 CONFIG_BACKLIGHT_LCD_SUPPORT=y
 CONFIG_LCD_CLASS_DEVICE=m
@@ -2905,7 +2905,7 @@ CONFIG_BACKLIGHT_CLASS_DEVICE=y
 # CONFIG_BACKLIGHT_ADP8860 is not set
 # CONFIG_BACKLIGHT_ADP8870 is not set
 # CONFIG_BACKLIGHT_LM3639 is not set
-CONFIG_BACKLIGHT_GPIO=m
+CONFIG_BACKLIGHT_GPIO=y
 # CONFIG_BACKLIGHT_LV5207LP is not set
 # CONFIG_BACKLIGHT_BD6107 is not set
 # CONFIG_VGASTATE is not set
